--- a/src/style.css
+++ b/src/style.css
@@ -5,3 +5,16 @@
 * {
     /* border: 0.3px solid gray */
 }
+
+.app-wrapper {
+    /* background-image: url('/src/assets/images/background.jpg'); */
+}
+
+.green-card {
+    background: rgba(203, 237, 173, 0.25);
+        box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+        backdrop-filter: blur(4px);
+        -webkit-backdrop-filter: blur(4px);
+        border-radius: 10px;
+        border: 1px solid rgba(255, 255, 255, 0.18);
+}
